optimon_service.log
[2025-10-09 07:10:36] ============================================================
[2025-10-09 07:10:36] INICIANDO VERIFICACION PROGRAMADA
[2025-10-09 07:10:36] ============================================================
[2025-10-09 07:10:36] Verificando servicios Docker...
[2025-10-09 07:10:37] Servicios Docker verificados: 3 activos
[2025-10-09 07:10:37] Iniciando verificacion automatica de dashboards...
[2025-10-09 07:10:37] Verificacion fallo - codigo: 1
[2025-10-09 07:10:37] Error:   File "c:\Users\oagr2\Documents\GitHub\PROYECTO_TESIS\dashboard_auto_verifier_simple.py", line 1
    c:\Users\oagr2\Documents\GitHub\PROYECTO_TESIS\dashboard_auto_verifier_simple.py
       ^
SyntaxError: unexpected character after line continuation character

[2025-10-09 07:10:37] Verificacion programada completada
[2025-10-09 07:10:37] ============================================================
[2025-10-09 07:12:14] ============================================================
[2025-10-09 07:12:14] INICIANDO VERIFICACION PROGRAMADA
[2025-10-09 07:12:14] ============================================================
[2025-10-09 07:12:14] Verificando servicios Docker...
[2025-10-09 07:12:14] Servicios Docker verificados: 3 activos
[2025-10-09 07:12:14] Iniciando verificacion automatica de dashboards...
[2025-10-09 07:12:16] Verificacion completada exitosamente
[2025-10-09 07:12:16] Todos los dashboards funcionando correctamente
[2025-10-09 07:12:16] Verificacion programada completada
[2025-10-09 07:12:16] ============================================================
